--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint \"**/*.js\"",
     "test": "npm run test:coverage && npm run lint",
     "test:coverage": "nyc --reporter=lcov mocha && nyc report",
-    "test:dev": "mocha ./test --watch"
+    "test:dev": "mocha --config=.mocharc.yaml",
+    "test:dev:watch": "nodemon  --exec npx mocha --config=.mocharc.yaml || true"
   },
   "author": "",
   "repository": {
@@ -19,6 +20,13 @@
     "chai": "^4.3.6",
     "eslint": "^8.23.1",
     "mocha": "^10.0.0",
+    "nodemon": "^3.1.9",
     "nyc": "^15.1.0"
+  },
+  "dependencies": {
+    "mysql2": "^3.13.0",
+    "sequelize": "^6.37.5",
+    "sqlite3": "^5.1.7",
+    "tedious": "^18.6.1"
   }
 }
