--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "type": "module",
   "scripts": {
+    "database:up": "docker compose -f docker/docker-compose.yml up -d",
+    "database:down": "docker compose -f docker/docker-compose.yml down",
     "lint": "eslint \"**/*.js\"",
     "test": "npm run test:coverage && npm run lint",
     "test:coverage": "nyc --reporter=lcov mocha && nyc report",
